# void

./: Cargo.toml  Dockerfile  LICENSE  README.md  VOID.md  fly.toml  paid-vs-free.md
db/: 0001_initial.sql
src/: auth.rs  config.rs  db.rs  handlers.rs  lib.rs  main.rs  state.rs  ws.rs
tests/: integration.rs
web/: index.html
web/assets/: app.js  style.css
